# salvatore

./: .gitignore  BIOS.cpp  CMakeLists.txt  LICENSE  README.md  VirtualMachine.cpp  allocation.cpp  bootloader.cpp  cpu.cpp  datareader.cpp  debug.cpp  emulation.cpp  filesystem.cpp  isohandler.cpp  main.cpp  parsing.cpp  ram.cpp  sample.cpp  vgadriver.cpp
cpudmp/: README
header/: BIOS.h  VirtualMachine.h  allocation.h  bootloader.h  cpu.h  datareader.h  debug.h  emulation.h  filesystem.h  isohandler.h  parsing.h  ram.h  vgadriver.h
include/libvirt/: libvirt-common.h
scripts/: build.bat
src/: main.cpp  qemu_wrapper.cpp  qemu_wrapper.h  vm_manager.cpp  vm_manager.h
